@@ -1,3 +1,7 @@
+Wed Oct 16 21:48 2013 CDT
+    * www/assets/js/player.js: Add a stupid timeout hack to address
+      a race condition in YouTube's HTML5 player.  Seriously?
+
 Wed Oct 16 17:34 2013 CDT
     * lib/utilities.js: Add a "Set" wrapper around objects to represent
       sets.
